# FinSight

./: README.md  config.py  graph.py  main.py  pyproject.toml  requirements.txt  state.py  streamlit.py  theory.md
nodes/: filing_ingestor.py  inspector.py  market_data.py  rag_analyst.py  search.py  synthesis.py  writer.py
notebooks/: notebook.ipynb
reports/: AAPL_20260416_204414.md  NVDA_20260416_213225.md
tests/: test_filing_ingestor.py  test_inspector.py  test_main_project.py  test_market_data.py  test_rag_analyst.py  test_search.py  test_synthesis.py  test_writer.py
