[project]
name = "finsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.0.0",
    "langgraph>=1.1.6",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.0",
    "tavily-python>=0.7.23",
    "yfinance>=1.2.1",
    "pytest>=8.0.0",
]
